Changed the GitHub icon color and position. Added "..." in MIDDLE of the too long cloud message. Fixed a bug when text in cloud is too long.

--- a/styles.css
+++ b/styles.css
@@ -81,8 +81,8 @@ h1
 #cloud-text-container
 {
   position: absolute;
-  left: 10%;
-  width: 80%;
+  left: 6%;
+  width: 88%;
   height: 100%;
   z-index: 3;
 }
